<resources>
    <string name="app_name">Mis Lugares Favoritos</string>
    <string name="informacion">Información</string>
    <string name="edicion">Nuevo/Edición</string>
    <string name="nombreLugar">Nombre:</string>
    <string name="categoriaLugar">Categoría:</string>
    <string name="longitudLugar">Longitud:</string>
    <string name="latitudLugar">Latitud:</string>
    <string name="valoracionLugar">Valoración:</string>
    <string name="ComentariosLugar">Comentarios:</string>
    <string name="title_activity_maps">Map</string>
    <string name="CategoriaElige">Elija categoría</string>
    <string name="CategoriaParque">Parque</string>
    <string name="CategoriaBar">Bar</string>
    <string name="CategoriaMuseo">Museo</string>
    <string name="CategoriaBiblioteca">Biblioteca</string>
    <string name="CategoriaTienda">Tienda</string>
    <string name="CategoriaTodas">Todas</string>


    <string name="accionNuevo">NUEVO</string>
    <string name="accionEditar">EDITANDO...</string>
</resources>
